--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Tabulky v html</h1>
+        <h1>Tabulky v HTML</h1>
     </header>
     <main>
         <table>
