--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
                 </tr>
             </tfoot>
         </table>
+
+        <h2>Tabulka druhá</h2>
+        <table class="text">
+        <tbody>
+            <tr>
+                <th rowspan="3" class="kruhy"><img src="/img/kruhy.jpeg" alt="">
+                </th>
+                <th colspan="2" >Zimní olympijské hry 2022</th>
+            </tr>
+            <tr>
+<th colspan="2">Počet účastníků: 2922 </th>
+            </tr>
+            <tr>
+<th>od:</th>
+<th>do:</th>
+            </tr>
+        </tbody>
+    </table>
     </main>
     <footer>
         &copy; Matěj Zimmer, IT1
