--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Tabulky v HTML</h1>
     </header>
     <main>
-        <table>
+        <table id="info">
             <caption class="text">Snowboarding Ženy U-rampa FINÁLE - 3. jízda</caption>
             <thead>
                 <tr class="text">
@@ -56,22 +56,22 @@
         </table>
 
         <h2>Tabulka druhá</h2>
-        <table class="text">
-        <tbody>
-            <tr>
-                <th rowspan="3" class="kruhy"><img src="/img/kruhy.jpeg" alt="">
-                </th>
-                <th colspan="2" >Zimní olympijské hry 2022</th>
-            </tr>
-            <tr>
-<th colspan="2">Počet účastníků: 2922 </th>
-            </tr>
-            <tr>
-<th>od:</th>
-<th>do:</th>
-            </tr>
-        </tbody>
-    </table>
+        <table class="" id="info">
+            <tbody>
+                <tr>
+                    <th rowspan="3" class="kruhy"> 
+                    </th>
+                    <th colspan="2">Zimní olympijské hry 2022</th>
+                </tr>
+                <tr>
+                    <th colspan="2">Počet účastníků: 2922 </th>
+                </tr>
+                <tr>
+                    <th>od: 4. února 2022</th>
+                    <th>do: 4. února 2022</th>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
         &copy; Matěj Zimmer, IT1
